:heavy_plus_sign: Add a Generator, Hydrator and Builder with associated unit test
