# openAPI-service/src/DataFixtures/OpenApiDocumentFixtures.yaml
@@ -1,48 +1,51 @@
 App\Entity\OpenApiDocument:
   document:
-    title: 'Petstore'
-    paths: ['@pet', '@pet_item']
+    title: 'Pet Store'
+    description: "This is a Pet Store"
+    version: '1.0.0'
+    paths: ['@pet_item']
     tags: ['@pet_tag']
     securitySchemes: ['@api_key']
 
 App\Entity\Path:
-  pet:
-    endpoint: '/pet'
-    items: ['@pet_post']
+#  pet:
+#    endpoint: '/pet'
+#    items: ['@pet_post']
   pet_item:
     endpoint: '/pet/{id}'
-    items: ['@pet_get', '@pet_delete']
+    items: ['@pet_get', '@pet_put']
+    parameters: ['@pet_get_id']
 
 App\Entity\PathItem:
-  pet_post:
-    httpMethod: '@post'
+  pet_put:
+    httpMethod: '@put'
     tags: ['@pet_tag']
-    summary: 'Add a new pet to the store'
+    summary: 'Update a pet'
     responses: ['@pet_post_405']
-    requestBody: '@pet_post_body'
+    requestBody: '@pet_put_body'
     securityScheme: '@api_key'
   pet_get:
     httpMethod: '@get'
     tags: ['@pet_tag']
     summary: 'Find pet by id'
-    responses: ['@pet_get_200', '@pet_get_400', '@pet_get_404']
-    parameters: ['@pet_get_id']
+    description: 'Find a pet in the Pet Store'
+    responses: ['@pet_get_200']
     securityScheme: '@api_key'
-  pet_delete:
-    httpMethod: '@delete'
-    tags: ['@pet_tag']
-    summary: 'Deletes a pet'
-    responses: ['@pet_delete_400', '@pet_delete_404']
-    parameters: ['@pet_delete_id']
-    securityScheme: '@api_key'
+#  pet_delete:
+#    httpMethod: '@delete'
+#    tags: ['@pet_tag']
+#    summary: 'Deletes a pet'
+#    responses: ['@pet_delete_400', '@pet_delete_404']
+#    parameters: ['@pet_delete_id']
+#    securityScheme: '@api_key'
 
 App\Entity\HttpMethod:
-  post:
-    method: 'POST'
+  put:
+    method: 'PUT'
   get:
     method: 'GET'
-  delete:
-    method: 'DELETE'
+#  delete:
+#    method: 'DELETE'
 
 App\Entity\HttpResponse:
   pet_post_405:
@@ -51,23 +54,42 @@ App\Entity\HttpResponse:
   pet_get_200:
     httpStatusCode: 200
     description: 'Successful operation'
-    content: '[{
-      "id": 0,
-      "name": "doggie",
-      "status": "available"
-    }]'
-  pet_get_400:
-    httpStatusCode: 400
-    description: 'Invalid ID supplied'
-  pet_get_404:
-    httpStatusCode: 404
-    description: 'Pet not found'
-  pet_delete_400:
-    httpStatusCode: 400
-    description: 'Invalid ID supplied'
-  pet_delete_404:
-    httpStatusCode: 404
-    description: 'Pet not found'
+    content:
+      type: 'object'
+      properties:
+        id:
+          example: 0
+        name:
+          example: 'doggie'
+        status:
+          example: 'available'
+
+#    content: '[{
+#      "type": "object",
+#      "properties": {
+#        "id": {
+#          "example": 0
+#        },
+#        "name": {
+#          "example": "doggie"
+#        },
+#        "status": {
+#          "example": "available"
+#        }
+#      }
+#    }]'
+#  pet_get_400:
+#    httpStatusCode: 400
+#    description: 'Invalid ID supplied'
+#  pet_get_404:
+#    httpStatusCode: 404
+#    description: 'Pet not found'
+#  pet_delete_400:
+#    httpStatusCode: 400
+#    description: 'Invalid ID supplied'
+#  pet_delete_404:
+#    httpStatusCode: 404
+#    description: 'Pet not found'
 
 App\Entity\Tag:
   pet_tag:
@@ -76,27 +98,33 @@ App\Entity\Tag:
 
 App\Entity\Parameter:
   pet_get_id:
-    name: 'petId'
-    location: '@query'
+    name: 'id'
+    location: '@path'
     description: 'ID of pet to return'
     required: true
-  pet_delete_id:
-    name: 'petId'
-    location: '@query'
-    description: 'ID of pet to delete'
-    required: true
+    parameterSchema:
+      type: 'integer'
+#  pet_delete_id:
+#    name: 'petId'
+#    location: '@query'
+#    description: 'ID of pet to delete'
+#    required: true
 
 App\Entity\ParameterLocation:
-  query:
-    location: 'query'
+  path:
+    location: 'path'
 
 App\Entity\RequestBody:
-  pet_post_body:
-    content: '[{
-      "id": 0,
-      "name": "doggie",
-      "status": "available"
-    }]'
+  pet_put_body:
+    content:
+      type: 'object'
+      properties:
+        id:
+          example: 0
+        name:
+          example: 'doggie'
+        status:
+          example: 'available'
     required: true
     description: 'Pet object that needs to be added to the store'
 
